@@ -1,11 +1,11 @@
 package programmers.org.voucher.repository.util;
 
-import programmers.org.voucher.repository.util.constant.Table;
-
 import java.util.ArrayList;
 import java.util.List;
 
 public class Delete {
+    private static final List<String> sql = new ArrayList<>();
+
     private String query;
 
     private Delete(String query) {
@@ -16,8 +16,32 @@ public class Delete {
         return query;
     }
 
-    public static Builder builder() {
-        return new Builder();
+    public static DeleteBuilder builder() {
+        return new DeleteBuilder();
+    }
+
+    public static class DeleteBuilder {
+        private DeleteBuilder() {
+
+        }
+
+        public WhereBuilder delete(Class table) {
+            String statement = String.format("%s", table.getSimpleName());
+            sql.add(statement);
+
+            return new WhereBuilder();
+        }
+    }
+
+    public static class WhereBuilder {
+        private WhereBuilder() {
+
+        }
+
+        public Builder where(Where where) {
+            sql.add(where.getQuery());
+            return new Builder();
+        }
     }
 
     public static class Builder {
@@ -27,25 +51,9 @@ public class Delete {
         private Builder() {
         }
 
-        private List<String> query = new ArrayList<>();
-
-        public Builder delete(Table table) {
-            String statement = String.format("%s", table);
-            query.add(statement);
-
-            return this;
-        }
-
-        public Builder where(Where where) {
-            query.add(where.getQuery());
-
-            return this;
-        }
-
         public Delete build() {
-            String queryJoin = String.join(" ", query);
-            String query = String.format("%s %s", DELETE_FROM, queryJoin);
-            return new Delete(query);
+            String join = String.join(" ", sql);
+            return new Delete("%s %s".formatted(DELETE_FROM, join));
         }
     }
 }
